# Python-Tables

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  tables.py
.github/workflows/: python-app.yml  python-test.yml
tests/: __init__.py  definitions.py  test_foreach.py  test_inheritance.py  test_main.py  test_operands.py
